5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4085/executions/1642_651.log
== TEST (2019-04-13 15:28:52) 
-- CODE:
altura = float(input("escreva a altura da pessoa: "))
opcao = input("escreva o sexo da pessoa? (M/F): ")
if (opcao == "M")
	pesoideal = (72.7 * altura) - 58
else:
		pesoideal = (62.1 * altura) - 44.7
print(round(pesoideal, 2))
-- ERROR:
File "XXXX", line 3
    if (opcao == "M")
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:29:04) 
-- CODE:
altura = float(input("escreva a altura da pessoa: "))
opcao = input("escreva o sexo da pessoa? (M/F): ")
if (opcao == "M"):
	pesoideal = (72.7 * altura) - 58
else:
		pesoideal = (62.1 * altura) - 44.7
print(round(pesoideal, 2))
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:29:34) 
-- CODE:
altura = float(input("escreva a altura da pessoa: "))
opcao = input("escreva o sexo da pessoa? (M/F): ")
if (opcao == "M"):
	pesoideal = (72.7 * altura) - 58
else:
		pesoideal = (62.1 * altura) - 44.7
print(round(pesoideal, 2))
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 15:29:53) 
-- CODE:
altura = float(input("escreva a altura da pessoa: "))
opcao = input("escreva o sexo da pessoa? (M/F): ")
if (opcao == "M"):
	pesoideal = (72.7 * altura) - 58
else:
		pesoideal = (62.1 * altura) - 44.7
print(round(pesoideal, 2))
-- EXECUTION TIME:
0.130343
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
